--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,11 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
 }
+
+.modal {
+	border: 3px solid green;
+	padding: 5px;
+	margin: 5px;
+	position: absolute;
+	left: 40%;
+}
